# Mikel-Suclanker_DiscordBot

./: LICENSE  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 263c8ab33d4d_generate_tables.py
config/: database.py
models/: models.py
