[project]
name = "mikelsumclankerdiscordbot"
version = "0.1.0"
description = "Discord bot for tracking racing results."
authors = [
    {name = "NicoRodBilbao",email = "2002nikoniko2002@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "uuid (>=1.30,<2.0)",
    "discord-py (>=2.6.3,<3.0.0)",
    "uuid-v7 (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false